<resources>
    <string name="app_name">Seal Hero Delivery</string>
    <!--<string name="app_name">Seal Hero Shops</string>-->
    <string name="title_activity_login">Seal Hero Delivery</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <string name="customet_name">Customer Name :</string>
    <string name="order_details">Order Details :</string>
    <string name="egp"> EGP</string>
    <string name="accept_order">Accept Order</string>
    <string name="enter_your_delivary_cost">Enter Your Delivary Cost</string>
    <string name="send">Send</string>
    <string name="success_send_delivary_cost">Success Send Delivary Cost</string>
    <string name="ok">OK</string>
    <string name="check_your_internet">Failed Send Delivary Cost, Please check your internet connection</string>
    <string name="what_is_your_cost">what is your cost?</string>
    <string name="arrive_resturant">Arrive Shop</string>
    <string name="received_the_request">received the request</string>
    <string name="delivered_the_order">Delivered the order</string>
    <string name="finish">Finish</string>
    <string name="failure">Failure</string>
    <string name="something_error_happened">The Order canceled</string>
    <string name="please_rate_resturant">Please rate Shop</string>
    <string name="finished">Finished</string>
    <string name="thank_you_for_using_our_app">thank you for using our app</string>
    <string name="your_location">Your Location</string>
    <string name="you_get_new_order">You get new order</string>
    <string name="new_order">new order</string>
    <string name="error_date">Error Data</string>
    <string name="please_check_your_email_and_password">Please check your email and password</string>
    <string name="no_internet">No Internet</string>
    <string name="please_check_your_internet">Please check your Internet</string>
    <string name="permission_denied">permission denied</string>
    <string name="you_will_not_get_order">you will not get orders</string>
    <string name="welcome">Welcome!</string>
    <string name="hope_you_enjoy_the_stay">Hope You Enjoy The Stay</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="seal_hero_delivery">Seal Hero Delivery</string>
    <string name="resturant_name">Shop Name</string>
    <string name="resturant_place">Shop Place</string>
    <string name="customer_place">Customer Place</string>
    <string name="order_number">Order Number</string>
    <string name="order_cost">Order Cost</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="name">name</string>
    <string name="adress">adress</string>
    <string name="id">id</string>
    <string name="dropped_off">Dropped Off</string>
    <string name="chat_is_pending">Chat Is Pending</string>
    <string name="resturant_phone">Shop Phone</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_phone">Customer Phone</string>
    <string name="delivery_cost">Delivery Cost</string>
    <string name="you_have_no_panding_deliveries">You have no panding deliveries</string>
    <string name="please_move_back_towards_the_center_of_your_zone">please move back towards the center of your zone</string>
    <string name="pending_order">Pending Order</string>
    <string name="current_order">Current Order</string>
    <string name="you_have_no_history_deliveries_in_this_day">You have no History deliveries in this day</string>
    <string name="logout">Logout</string>
    <string name="roadrunner_app_feedback">RoadRunner App Feedback</string>
    <string name="settings">Settings</string>
    <string name="rooster">Rooster</string>
    <string name="rate_this_resturant">Rate this Shop</string>
    <string name="submit">Submit</string>
    <string name="status">Status</string>
    <string name="deliveries">Deliveries</string>
    <string name="map">Map</string>
    <string name="chat">Chat</string>
    <string name="history">History</string>
    <string name="save">Save</string>
    <string name="delivaries_number">Delivaries number :</string>
    <string name="cost">Earning : </string>
    <string name="change_password">Change Password</string>
    <string name="success_change_password">Success Change Password</string>
    <string name="wrong_password">Error, You Enter wrong password</string>
    <string name="confirm_password">confirm password</string>
    <string name="new_password">new password</string>
    <string name="old_password">old password</string>
    <string name="check_your_data">Check your password</string>
    <string name="short_password">Short Password</string>
    <string name="you_enter_short_password">You Enter Short Password</string>
    <string name="back">Back</string>
    <string name="delivary_status">Delivary Status</string>
    <string name="start_order">Start Order</string>
    <string name="order_canceled">Order Canceled</string>
    <string name="order_finished">Order Finished</string>
    <string name="order_pending">Order Pending</string>
    <string name="company_dues">Company dues :</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="current_balance">Current Balance</string>
    <string name="busy">Busy</string>
    <string name="not_busy">Available</string>
    <string name="contact_us">contact us</string>
    <string name="working">Working</string>
    <string name="not_working">Not Working</string>
    <string name="work_with_us">register with us as a driver click here</string>
    <string name="choose_language">Choose Language</string>
    <string name="lang">English</string>

</resources>
