<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".ChangePasswordActivity">

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        float:fletPadding="10dp"
        android:textColor="#000"
        android:layout_margin="15dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:id="@+id/old_password"
            android:textColor="#000"
            android:textColorHint="#000"
            android:inputType="textPassword"
            android:gravity="center"
            android:backgroundTint="#000"/>
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        float:fletPadding="10dp"
        android:textColor="#000"
        android:layout_margin="15dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:id="@+id/new_password"
            android:textColor="#000"
            android:textColorHint="#000"
            android:gravity="center"
            android:inputType="textPassword"
            android:backgroundTint="#000"/>
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        float:fletPadding="10dp"
        android:textColor="#000"
        android:layout_margin="15dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:id="@+id/confirm_password"
            android:textColor="#000"
            android:gravity="center"
            android:textColorHint="#000"
            android:inputType="textPassword"
            android:backgroundTint="#000"/>
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#555"
        android:onClick="changePassword"
        android:text="@string/change_password"
        android:textColor="@color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#555"
        android:onClick="closeActivity"
        android:text="@string/back"
        android:textColor="@color/white" />

</LinearLayout>
